--- a/style.css
+++ b/style.css
@@ -595,7 +595,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 170px;
+    min-height: 20px;
     color: #F8F9FA;
 }
 
@@ -605,10 +605,11 @@ main {
 }
 
 #skills .skill-logo {
-    height: 60px;
-    width: 60px;
+    height: 4rem;
+    width: 4rem;
     object-fit: contain;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+    margin-right: 0.5rem;
 }
 
 #skills .skill-name {
